<resources>
    <string name="app_name">Formulario</string>
    <string name="form_confirm_data_title">Confirmar datos</string>
    <string name="form_title">Completa tus datos</string>
    <string name="form_name">Nombre completo</string>
    <string name="form_date">Fecha de nacimiento</string>
    <string name="form_tel">Teléfono</string>
    <string name="form_desc">Descripción</string>
    <string name="form_email">Email</string>
    <string name="form_btn_sig">Siguiente</string>
    <string name="form_btn_edit">Editar datos</string>
</resources>